	* gm2/Make-lang.in:  added wrapsock.c to list of
	  GM2-LIBS-ISO-C files.  Also added ClientSocket.mod
	  to GM2-LIBS-ISO-MODS.
	* gm2/gm2-libs/sckt.def:  tidied up comments.
	* gm2/gm2-libs-iso/ErrnoCategory.c:  use ChanConsts.h.
	* gm2/gm2-libs-iso/SimpleCipher.def:  RemoveCipherLayer
	  new function and fixed destructors.
	* gm2/gm2-libs-iso/Strings.def:  tidied up comments.

2008-09-30       Gaius Mulley <gaius@gnu.org>

        * gm2/Make-lang.in:  added ProgramArgs, SimpleCipher,
	  RTData modules to be installed as part of the ISO
	  libraries.
        * gm2/TODO:  updated TODO with outstanding bugs.
        * gm2/gm2.texi:  updated modification date to reflect
	  new modules.
        * gm2/gm2-libs/Args.mod:  updated dates.
        * gm2/gm2-libs-iso/M2RTS.mod:  fixed bug regarding
	  whether an application is terminating.
        * gm2/gm2-libs-iso/ProgramArgs.def:  updated dates.
        * gm2/gm2-libs-iso/README.texi:  updated list of
	  completed modules and their licence.
        * gm2/gm2-libs-iso/RTgen.mod:  fixed bug when
	  examining pre read status.
        * gm2/gm2-libs-iso/RawIO.def:  tidied up comments.
        * gm2/gm2-libs-iso/RawIO.mod:  fixed read results
	  bug.
        * gm2/gm2-libs-iso/STextIO.mod:  tidied up comments.
        * gm2/gm2-libs-iso/SimpleCipher.{def,mod}:  new files.
	* gm2/gm2-libs-iso/ProgramArgs.mod:  new file.
	* gm2/examples/iso/hello:  new directory for example.
	* gm2/examples/iso/hello/hello.mod:  new file.
	* gm2/examples/iso/files:  new directory for example.
	* gm2/examples/iso/files/rot13.mod:  new file.

2008-09-25       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2spec.c:  add -lgcc_eh to the link command line.
	* gm2/Make-lang.in:  added many new implementation and
	  definition modules to be installed as part of the ISO
	  library.
	* gm2/TODO:  added more outstanding bug reports.
	* gm2/gm2-compiler/M2ALU.mod:  flush non recoverable
	  errors.  Fixed bug during generation of constant array