@@ -1,0 +1,10 @@
+
+
+all: force
+	gm2 -g -c -fiso client.mod
+	gm2 -g -fiso client.mod
+
+clean: force
+	$(RM) a.out client.o *~
+
+force:
